<resources>
    <string name="app_name">Погода</string>
    <string name="logotext">Погода в любом городе</string>
    <string name="hint_User_Field">Введите город</string>
    <string name="main_btn">Узнать погоду</string>
    <string name="act_befor">На главную</string>
    <string name="no_user_input">Введите текст</string>
    <string name="_1_3">Версия 1.3</string>
    <string name="Author">Автор: Максим Лачугин</string>
    <string name="_1_4">Версия 1.4</string>
    <string name="_1_5">Версия 1.5</string>
    <string name="title_activity_second">SecondActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">История версий</string>
    <string name="second_fragment_label">Связь с разработчиком</string>
    <string name="next">Далее</string>
    <string name="previous">Назад</string>
    <string name="InternetCon">Подключите интернет</string>
    <string name="NoCity">Город не найден</string>

    <string name="hello_first_fragment">
        Последние обновления:\n
        1.0 - вывод температуры в городе\n
        1.1 - вывод скорости ветра и облачность\n
        1.2 - дизайн кнопок, бэкграунда и полей\n
        1.3 - добавлен скролл и поворот экрана\n
        1.4 - скрытие клавиатуры и очистка ввода\n
        2.0 - новый функционал перехода между страницами\n
        2.1 - исправлены ошибки при неправильном городе\n
        2.2 - выведена ошибки при отсутствие интернета\n
        2.2 - динамичный фон, исправлены баги\n

    </string>

    <string name="hello_second_fragment">
        Для связи с разработчиком\n
        и обратной связи вы можете писать\n
        на почту maksim.lachugin111@gmail.com
    </string>

    <string name="secondlist">Перейти</string>
    <string name="_2_2">Версия 2.2</string>
</resources>